# cheaders

./: .gitignore  .mailmap  CMakeLists.txt  Register.h  SharemindCHeadersConfig.cmake.in  SharemindCHeadersConfigVersion.cmake.in  SharemindVmGlobalsConfigVersion.cmake.in  global.h
include/sharemind/: CMakeLists.txt  codeblock.h  instrset.h  map.h  preprocessor.h  refs.h  simpleset.h  stack.h  stringmap.h  trie.h  vector.h
src/: AlignToCacheLine.h  CacheLineSize.h  DebugOnly.h  Register.h  abort.h  apocalyptic_safety.h  casts.h  codeblock.h  comma.h  common_static_asserts.h  datatypebyte.h  endian.h  extern_c.h  fnv.h  instrset.h  lasterror.h  likely.h  locks.h  main.c  main.cpp  map.h  modapi.h  modapi_0x1.h  mutex.h  null.h  operandlocationbyte.h  preprocessor.h  recursive_locks.h  recursive_mutex.h  refs.h  restrict.h  set.h  stack.h  static_assert.h  stringmap.h  tag.h  trie.h  vector.h  wrap.h
src/compiler-support/: ClangVersion.h  GccVersion.h
src/compiler-support/detail/: CompilerVersionPrelude.h
src/sharemind/: CMakeLists.txt  SharemindVmGlobalsConfig.cmake.in  codeblock.h  map.h  mutex.h  preprocessor.h  recursivemutex.h  refs.h  simpleset.h  stack.h  static_assert.h  stringmap.h  trie.h  vector.h
